This will allow Kleopatra to filter out any user ids not matching the address used for a WKD lookup when importing keys that were looked up via WKD (which is exactly what gpg is doing).
Description
Description
Revisions and Commits
Revisions and Commits
| rM GPGME | |||
| rM619579bb1725 qt: Allow specifying an import filter when importing keys | |||
| rM3c770013d723 qt: Fix erroneous reuse of JobPrivate objects | |||
| rMd35d44efaf72 core: Allow setting import filters when importing keys | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Resolved | • ikloecker | T5334 Kleopatra: Add more support for WKS / WKD | ||
| Resolved | • ikloecker | T5739 gpgme: Allow setting import filters when importing keys |