src/context.h
@@ -180,6 +180,9 @@ struct gpgme_context
   /* The optional key origin.  */
   char *key_origin;
 
+  /* The optional import filter.  */
+  char *import_filter;
+
   /* The operation data hooked into the context.  */
   ctx_op_data_t op_data;
 
